# PossibleSolution

./: CMakeLists.txt
src/application/: CMakeLists.txt  simulation.cpp
src/simulator-lib/: Bar.cpp  Bar.h  CMakeLists.txt  Group.cpp  Group.h  LinkedList.h  Student.cpp  Student.h  StudentExitPair.h  bar-simulator.cpp  bar-simulator.h
test/: CMakeLists.txt  solution.cpp  test-simulation.cpp
